syntax = "proto3";
import public "google/protobuf/timestamp.proto";
option go_package = "./protobuf";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}


service Owner {
    rpc CheckGuest(CheckRequest) returns (CheckResponse) {}
}

message CheckRequest{
    string passwd = 1;
}

message CheckResponse{
    repeated Guest guest = 1;
}

message Guest{
    string name = 1;
    google.protobuf.Timestamp time = 2;
    int64 timestamp = 3;
}